test_suite5/ALAN/test_suite/alan-2022-examples/passing/000020_random.alan
source FRM function E3() to integer array begin if 3009300 then relax else relax end end begin boolean array V, _97Qa, r; relax end
